# sphinx-intl

./: .gitignore  .hgignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES  CHANGES.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  TESTING.rst  checklist.rst  pyproject.toml  requirements-dev.txt  requirements-testing.txt  setup.cfg  setup.py  sphinx_intl.py  tox.ini
.devcontainer/: devcontainer.json  on_create_command.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  doc.yml  test.yml
doc/: Makefile  basic.rst  conf.py  dev.rst  index.rst  make.bat  quickstart.rst  refs.rst  requirements.txt
sphinx_intl/: __init__.py  __main__.py  __main__.pyi  basic.py  basic.pyi  catalog.py  catalog.pyi  commands.py  commands.pyi  py.typed  pycompat.py  pycompat.pyi  sphinx_util.py  sphinx_util.pyi  transifex.py  transifex.pyi
tests/: conftest.py  path.py  run.py  test_basic.py  test_catalog.py  test_cmd_pot.py  test_cmd_transifex.py  test_commands.py  test_locale_dirs_default.py  test_parse_option.py  test_transifex.py  utils.py
tests/root/_build/locale/: README.pot
