[project]
name = "sphinx-intl"
dynamic = ['version']
authors = [
    { name = "Takayuki SHIMIZUKAWA", email = "shimizukawa@gmail.com" }
]
description = "Sphinx utility that make it easy to translate and to apply translation."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "setuptools",
    "click",
    "babel",
    "sphinx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Sphinx",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/sphinx-doc/sphinx-intl"
Documentation = "https://sphinx-intl.readthedocs.io"

[project.scripts]
sphinx-intl = "sphinx_intl.commands:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "sphinx_intl.__version__"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
