[project]
name = "sphinx-intl"
dynamic = ['version']
authors = [
    { name = "Takayuki SHIMIZUKAWA", email = "shimizukawa@gmail.com" }
]
description = "Sphinx utility that make it easy to translate and to apply translation."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "setuptools",
    "click",
    "babel",
    "sphinx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Sphinx",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.8.0",
    "tox-gh-actions>=3.2.0",
    "tox-uv>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/sphinx-doc/sphinx-intl"
Documentation = "https://sphinx-intl.readthedocs.io"

[project.scripts]
sphinx-intl = "sphinx_intl.commands:main"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
# this empty section means: use_scm_version=True

[tool.mypy]
ignore_missing_imports = true
strict_optional = false

[tool.uv.sources]
sphinx-intl = { workspace = true }
