[project]
name = "sphinx-intl"
dynamic = ['version']
authors = [
    { name = "Takayuki SHIMIZUKAWA", email = "shimizukawa@gmail.com" }
]
description = "Sphinx utility that make it easy to translate and to apply translation."
readme = "README.rst"
requires-python = ">=3.9"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
dependencies = [
    "click>=8.0.0",
    "babel>=2.9.0",
    "sphinx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Sphinx",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "tox-gh-actions>=3.3.0",
    "tox-uv>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/sphinx-doc/sphinx-intl"
Documentation = "https://sphinx-intl.readthedocs.io"

[project.scripts]
sphinx-intl = "sphinx_intl.commands:main"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
# https://setuptools-scm.readthedocs.io/en/latest/extending/#available-implementations_1
# because pypi does not support local version like .devN+<local_version>
local_scheme = "no-local-version"

[tool.mypy]
ignore_missing_imports = true
strict_optional = false

[tool.uv.sources]
sphinx-intl = { workspace = true }
